--- a/lesson5_assignment/style.css
+++ b/lesson5_assignment/style.css
@@ -3,12 +3,13 @@
 
 body {
 	font-family: Arial, Helvetica, sans-serif, Verdana;
-	font-size: 14px;
-	line-height: 1.6em;
+	font-size: 16px;
+	line-height: 1.7em;
 	color: #FFFFFF;
 	background-color: #1A1F5A;
 	padding: 20px 60px;
 	font-weight: normal;
+	
 }
 
 /* basic text styles ----------------------------  */
@@ -16,7 +17,7 @@ p, li, td {
 	font-family: monospace;
 	letter-spacing: 0.1em;
 	color: #FFFFFF;
-	background-color: #3A631E;
+	
 	
 	
 }
@@ -56,18 +57,18 @@ h3 {
 a:link {
 	font-family: serif;
 	font-weight: bold;
-	color: #29FF03;
+	color: #F7FFFF;
 	text-decoration: underline;
 }
 a:visited {
 	font-family: serif;
 	font-weight: normal;
-	color: #FFDD03;
+	color: #25FF1F;
 	text-decoration: underline;
 }
 a:hover {
 	font-family: serif;
-	color: #F7FFFF;
+	color: #3A631E;
 	text-decoration: none;
 	font-weight: bolder;
 }
@@ -84,7 +85,7 @@ ol {
 /* table styles -------------------------------------- */
 table {
 	border: solid #F7FFFF 1px;
-
+	padding: 10px;
 }
 td {
 	padding: 6px;
